--- a/package.json
+++ b/package.json
@@ -2,5 +2,12 @@
   "name": "globetrotter-backend",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "express-jwt": "^5.3.3",
+    "jsonwebtoken": "^8.5.1",
+    "uuid": "^8.1.0"
+  }
 }
