--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "^4.17.1",
     "express-jwt": "^5.3.3",
     "jsonwebtoken": "^8.5.1",
+    "lowdb": "^1.0.0",
     "uuid": "^8.1.0"
   },
   "devDependencies": {
@@ -15,6 +16,6 @@
   },
   "scripts": {
     "start": "node ./src/app.js",
-    "dev": "npx nodemon start ./src/app.js"
+    "dev": "npx nodemon --ignore db.json ./src/app.js"
   }
 }
