Firebase userid validation

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-jwt": "^5.3.3",
+    "firebase-admin": "^8.12.1",
     "jsonwebtoken": "^8.5.1",
     "lowdb": "^1.0.0",
     "uuid": "^8.1.0"
@@ -15,7 +16,7 @@
     "nodemon": "^2.0.4"
   },
   "scripts": {
-    "start": "node ./src/app.js",
-    "dev": "npx nodemon --ignore db.json ./src/app.js"
+    "start": "GOOGLE_APPLICATION_CREDENTIALS='/Users/marcinmoch/dev/serviceAccountKey.json' node ./src/app.js",
+    "dev": "GOOGLE_APPLICATION_CREDENTIALS='/Users/marcinmoch/dev/serviceAccountKey.json' npx nodemon --ignore db.json ./src/app.js"
   }
 }
